harness/test/errors/042_destructure_missing_field.eu
# Error test: missing field in block destructuring
f({x y}): x + y
RESULT: f({x: 1})
